--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
  <img src="https://i.postimg.cc/CLmB5tML/1-5.jpg" alt="apkskeeda.jpg" style="max-width: 100%; height: auto;">
 </div>
 
-<h2> <a href="https://lexlawfirm.vercel.app/">How to Do Nikah Online: A Step-by-Step Guide</a></h2>
+<h2> <a href="https://apkkeed.vercel.app/">Unlock the Sweetness of Candy Crush Mod APK</a></h2>
 
 
 <h2 class="mb-2 mt-6 text-lg first:mt-3">What is Chikii Mod APK?</h2>
